HIVE-29084: PR feedback + a brand new set of only essential test queries